# arcade-ai

./: .editorconfig  .gitignore  .prettierrc.toml  Makefile  README.md  create-docs-for-auth-toolkit.py  cspell.config.yaml
.github/workflows/: check-toolkits.yml  main.yml  publish-langchain.yml  publish-toolkit.yml  release-containers.yml  release-toolkits.yml  test-langchain.yml  test-toolkits.yml
arcade/: pyproject.toml  tox.ini
arcade/arcade/: test.py
contrib/langchain/: README.md  pyproject.toml
docker/: Dockerfile  Makefile  README.md  docker-compose.yml  docker.engine.yaml  env.example
examples/: call_an_image_tool_with_llm.py
examples/arcade_example_nate/: main.py  (+1 more)
examples/arcade_gmail/: pyproject.toml
examples/arcade_gmail/arcade_gmail/tools/: gdrive.py  gmail.py
examples/arcade_gmail/tools/: hello.py
examples/arcade_simple/: pyproject.toml
examples/arcade_simple/arcade_simple/tools/: __init__.py  hello.py
examples/arcade_simple/evals/: eval_hello.py
schemas/: tools_status_response.schema.jsonc
toolhub/: generate_toolhub_docs.py
toolkits/discord/: Makefile  README.md  discord.md  pyproject.toml
toolkits/discord/arcade_discord/: __init__.py  client.py  custom_types.py  exceptions.py  gateway.py  utils.py  validation.py
toolkits/discord/arcade_discord/tools/: __init__.py  decorator_template.py  examples.py  guild.py  parameter_standardization.py  parameter_template.py  user.py
toolkits/discord/arcade_discord/tools/channels/: __init__.py  create_channel.py  create_text_channel.py  get_channel.py  list_channels.py
toolkits/discord/arcade_discord/tools/gateway/: __init__.py  monitor_messages.py  register_webhook.py  subscribe_to_events.py  unsubscribe_from_events.py
toolkits/discord/arcade_discord/tools/messages/: __init__.py  delete_message.py  edit_message.py  list_messages.py  send_message.py
toolkits/discord/arcade_discord/tools/reactions/: add_reaction.py
toolkits/discord/arcade_discord/tools/roles/: manage_role.py
toolkits/discord/arcade_discord/tools/servers/: __init__.py  get_server.py  list_servers.py
toolkits/discord/arcade_discord/tools/threads/: manage_threads.py
toolkits/discord/arcade_discord/tools/users/: __init__.py  get_current_user.py  get_user.py
toolkits/discord/arcade_discord/tools/voice/: manage_voice.py
toolkits/discord/arcade_discord/tools/webhooks/: __init__.py  create_webhook.py  execute_webhook.py  send_webhook_message.py
toolkits/discord/arcade_discord/tools/workflows/: __init__.py  bulk_actions.py  create_and_send.py  create_announcement_channel.py  get_recent_activity.py  moderation.py  search_messages.py
toolkits/discord/evals/: eval_discord.py
toolkits/discord/tests/: test_discord.py
toolkits/stripe/: Makefile  _generate.py  pyproject.toml
toolkits/stripe/arcade_stripe/: utils.py
toolkits/stripe/arcade_stripe/tools/: stripe.py
toolkits/stripe/evals/: eval_stripe.py
toolkits/stripe/tests/: test_stripe.py
(+253 files in other folders)
