[tool.poetry]
name = "arcade_gmail"
version = "0.1.0"
description = "Tools for reading, writing, and accessing gmail"
authors = ["Sam Partee <sam@arcade-ai.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.arcade]
tools = ["arcade_gmail.tools.hello"]
