[tool.poetry]
name = "arcade_simple"
version = "0.1.0"
description = "Example package for Arcade tutorial"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.arcade]
modules = ["arcade_simple.tools.hello"]
