[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcade-discord"
version = "0.1.0"
description = "Discord toolkit for Arcade AI"
authors = [
    {name = "Arcade Team", email = "team@arcade.software"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies
    "arcade-tool-runtime>=0.1.2",
    "pydantic>=2.4.0,<3.0.0",
    
    # Discord-specific
    "discord.py>=2.3.2,<3.0.0",
    "discord-webhook>=1.3.0,<2.0.0",
    "discord-oauth2>=0.1.2,<0.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.28.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0,<5.0.0",
    
    # Linting and formatting
    "black>=23.0.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.0.0,<2.0.0",
    "types-requests>=2.28.0,<3.0.0",
]

[tool.setuptools]
packages = ["arcade_discord"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 
