[tool.poetry]
name = "arcade_stripe"
version = "0.1.0"
description = "LLM tools for interacting with Stripe"
authors = ["Arcade AI Dev <dev@arcade-ai.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stripe-agent-toolkit = "^0.1.21"
arcade-ai = "0.1.*"
stripe = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
